# viewjson

./: AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
appimage/: build-appimage.sh  slopjson.desktop
macos/: MacOS.md
macos/slopjson/: slopjson-Bridging-Header.h  slopjsonApp.swift
macos/slopjson.xcodeproj/project.xcworkspace/xcuserdata/arjun.xcuserdatad/: UserInterfaceState.xcuserstate
macos/slopjson.xcodeproj/xcuserdata/arjun.xcuserdatad/xcschemes/: xcschememanagement.plist
src/: ffi.rs  json_reader.rs  lib.rs  main.rs  tree_builder.rs  tree_model.rs  value_formatting.rs
